-----------------------------------
java-assess version 2.7.5 (2020-05-20)
-----------------------------------
- Add prototype cryptguard swamp tool

-----------------------------------
java-assess version 2.7.4 (2020-04-09)
-----------------------------------
- Update dependencies for newer versions of platforms
- Update java configuration for newer versions of platforms
- Eliminate version-specific ps-jtest configuration; the
  versions were not matched, which caused the tool to log
  an unneeded warning.   Now it is version independent.

-----------------------------------
java-assess version 2.7.3 (2020-01-28)
-----------------------------------
- support negative epoch seconds and negative time differences; will not occur
  in normal operation, but can if the clock is not set or goes backwards

-----------------------------------
java-assess version 2.7.2 (2020-01-16)
-----------------------------------
- Fix Parasoft J-test assessment failures when both the package and build
  directories were undefined or '.'
- Improved low-level provisioning code to include additional diagnostic
  information, and other small improvements

-----------------------------------
java-assess version 2.7.1 (2019-12-11)
-----------------------------------
- always read parsed_results_data.conf if available
- generate a proper error if parsed_results_data.conf is missing
- always get task information for parse-results from weakness_count.out file
- put stdout and stderr of the resultparser in resultparser_stdout.out, and
  resultparser_stderr.out in the parsed_results directory

-----------------------------------
java-assess version 2.7.0 (Thu Dec 05 14:00:00 CDT 2019)
-----------------------------------
- Added support to log non-assessment commands to assessment_summary
- Added execution-successful property to assessment_summary
- Fixed executable and args list in summary files
- Added support to configure tools and result parser via services.conf