@@ -58,7 +58,6 @@ class AssessmentSummary:
         return self
 
     def __exit__(self, exception_type, value, traceback):
-        AssessmentSummary._add(self._root, 'end-ts', utillib.posix_epoch())
         AssessmentSummary._add(self._root, 'stop-ts', utillib.posix_epoch())
 
         tree = ET.ElementTree(self._root)
@@ -118,7 +117,7 @@ class AssessmentSummary:
         AssessmentSummary._add(assess_elem, 'execution-successful',
                 utillib.bool_to_string(execution_successful))
         AssessmentSummary._add(assess_elem, 'start-ts', starttime)
-        AssessmentSummary._add(assess_elem, 'end-ts', endtime)
+        AssessmentSummary._add(assess_elem, 'stop-ts', endtime)
 
         cmd_elem = AssessmentSummary._add(assess_elem, 'command')
 
